--- a/src/app/view/one-drive/one-drive.component.html
+++ b/src/app/view/one-drive/one-drive.component.html
@@ -13,162 +13,32 @@
 
     <!-- /.card-header -->
     <div class="card-body">
-      <div class="card">
-        <!-- /.card-header -->
-        <div class="card-body">
-          <div id="example1_wrapper1" class="dataTables_wrapper dt-bootstrap4">
-            <div class="row">
-              <div class="col-sm-12 col-md-6">
-                <div class="dt-buttons btn-group flex-wrap">
-                  <button class="btn btn-secondary buttons-copy buttons-html5" tabindex="0"
-                          aria-controls="example1" type="button"><span>Copy</span></button>
-                  <button class="btn btn-secondary buttons-csv buttons-html5" tabindex="0"
-                          aria-controls="example1" type="button"><span>CSV</span></button>
-                  <button class="btn btn-secondary buttons-excel buttons-html5" tabindex="0"
-                          aria-controls="example1" type="button"><span>Excel</span></button>
-                  <button class="btn btn-secondary buttons-pdf buttons-html5" tabindex="0"
-                          aria-controls="example1" type="button"><span>PDF</span></button>
-                  <button class="btn btn-secondary buttons-print" tabindex="0" aria-controls="example1"
-                          type="button"><span>Print</span></button>
-                  <div class="btn-group">
-                    <button class="btn btn-secondary buttons-collection dropdown-toggle buttons-colvis"
-                            tabindex="0" aria-controls="example1" type="button" aria-haspopup="true"
-                            aria-expanded="false"><span>Column visibility</span></button>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-12 col-md-6">
-                <div id="example1_filter1" class="dataTables_filter"><label>Search:<input type="search"
-                                                                                          class="form-control form-control-sm"
-                                                                                          placeholder=""
-                                                                                          aria-controls="example1"></label>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-12">
-                <table id="example11" class="table table-bordered table-striped dataTable dtr-inline" role="grid"
-                       aria-describedby="example1_info">
-                  <thead>
-                  <tr role="row">
-                    <th class="sorting_asc" tabindex="0" aria-controls="example1" rowspan="1" colspan="1"
-                        aria-sort="ascending" aria-label="Rendering engine: activate to sort column descending">
-                      User Address
-                    </th>
-                    <th class="sorting" tabindex="0" aria-controls="example1" rowspan="1" colspan="1"
-                        aria-label="Browser: activate to sort column ascending">File Count
-                    </th>
-                    <th class="sorting" tabindex="0" aria-controls="example1" rowspan="1" colspan="1"
-                        aria-label="Browser: activate to sort column ascending">Size
-                    </th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  <tr role="row" class="odd">
-                    <td class="dtr-control sorting_1" tabindex="0">Gecko</td>
-                    <td>Firefox 1.0</td>
-                    <td>Firefox 1.0</td>
-                  </tr>
-                  <tr role="row" class="even">
-                    <td class="dtr-control sorting_1" tabindex="0">Gecko</td>
-                    <td>Firefox 1.5</td>
-                    <td>Firefox 1.5</td>
-                  </tr>
-                  <tr role="row" class="odd">
-                    <td class="dtr-control sorting_1" tabindex="0">Gecko</td>
-                    <td>Firefox 2.0</td>
-                    <td>Firefox 2.0</td>
-                  </tr>
-                  <tr role="row" class="even">
-                    <td class="dtr-control sorting_1" tabindex="0">Gecko</td>
-                    <td>Firefox 3.0</td>
-                    <td>Firefox 3.0</td>
-                  </tr>
-                  <tr role="row" class="odd">
-                    <td class="sorting_1 dtr-control">Gecko</td>
-                    <td>Camino 1.0</td>
-                    <td>Camino 1.0</td>
-                  </tr>
-                  <tr role="row" class="even">
-                    <td class="sorting_1 dtr-control">Gecko</td>
-                    <td>Camino 1.5</td>
-                    <td>Camino 1.5</td>
-                  </tr>
-                  <tr role="row" class="odd">
-                    <td class="dtr-control sorting_1" tabindex="0">Gecko</td>
-                    <td>Firefox 1.0</td>
-                    <td>Firefox 1.0</td>
-                  </tr>
-                  <tr role="row" class="even">
-                    <td class="dtr-control sorting_1" tabindex="0">Gecko</td>
-                    <td>Firefox 1.5</td>
-                    <td>Firefox 1.5</td>
-                  </tr>
-                  <tr role="row" class="odd">
-                    <td class="dtr-control sorting_1" tabindex="0">Gecko</td>
-                    <td>Firefox 2.0</td>
-                    <td>Firefox 2.0</td>
-                  </tr>
-                  <tr role="row" class="even">
-                    <td class="dtr-control sorting_1" tabindex="0">Gecko</td>
-                    <td>Firefox 3.0</td>
-                    <td>Firefox 3.0</td>
-                  </tr>
-                  <tr role="row" class="odd">
-                    <td class="sorting_1 dtr-control">Gecko</td>
-                    <td>Camino 1.0</td>
-                    <td>Camino 1.0</td>
-                  </tr>
-                  <tr role="row" class="even">
-                    <td class="sorting_1 dtr-control">Gecko</td>
-                    <td>Camino 1.5</td>
-                    <td>Camino 1.5</td>
-                  </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-12 col-md-5">
-                <div class="dataTables_info" id="example1_info1" role="status" aria-live="polite">Showing 1 to 10
-                  of 57 entries
-                </div>
-              </div>
-              <div class="col-sm-12 col-md-7">
-                <div class="dataTables_paginate paging_simple_numbers" id="example1_paginate1">
-                  <ul class="pagination">
-                    <li class="paginate_button page-item previous disabled" id="example1_previous1"><a href="#"
-                                                                                                       aria-controls="example1"
-                                                                                                       data-dt-idx="0"
-                                                                                                       tabindex="0"
-                                                                                                       class="page-link">Previous</a>
-                    </li>
-                    <li class="paginate_button page-item active"><a href="#" aria-controls="example1"
-                                                                    data-dt-idx="1" tabindex="0"
-                                                                    class="page-link">1</a></li>
-                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="2"
-                                                              tabindex="0" class="page-link">2</a></li>
-                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="3"
-                                                              tabindex="0" class="page-link">3</a></li>
-                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="4"
-                                                              tabindex="0" class="page-link">4</a></li>
-                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="5"
-                                                              tabindex="0" class="page-link">5</a></li>
-                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="6"
-                                                              tabindex="0" class="page-link">6</a></li>
-                    <li class="paginate_button page-item next" id="example1_next1"><a href="#"
-                                                                                      aria-controls="example1"
-                                                                                      data-dt-idx="7" tabindex="0"
-                                                                                      class="page-link">Next</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- /.card-body -->
-      </div>
+      <table id="example2" class="table table-bordered table-striped">
+        <thead>
+        <tr>
+          <th>User Email Address</th>
+          <th>File Count</th>
+          <th>Size(MB)</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>Win 95+</td>
+          <td> 4</td>
+          <td>X</td>
+        </tr>
+        <tr>
+          <td>Win 95+</td>
+          <td>5</td>
+          <td>C</td>
+        </tr>
+        <tr>
+          <td>Win 95+</td>
+          <td>5.5</td>
+          <td>A</td>
+        </tr>
+        </tbody>
+      </table>
     </div>
     <!-- /.card-body -->
 
